base/resources/awesome-app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awesome-app-deployment
  labels:
    app: awesome-app
spec:
  replicas: 1
  selector:
    matchLabels:
      component: awesome-app
  template:
    metadata:
      labels:
        component: awesome-app
    spec:
      serviceAccountName: awesome-app-sa
      containers:
        - name: awesome-app
          image: bespinian/awesome-image:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
