base/resources/awesome-app-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: awesome-app-ing
  labels:
    app: awesome-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /awesome/?(.*)
            backend:
              serviceName: awesome-app
              servicePort: 80
